fixed nav behind z-index

--- a/assets/scss/_component.header.scss
+++ b/assets/scss/_component.header.scss
@@ -75,7 +75,7 @@ header {
 
 		&.open {
 			span:nth-child(1) {
-				top: 18px;
+				top: 0%;
 				width: 0%;
 				left: 50%;
 			}
@@ -89,10 +89,21 @@ header {
 			}
 
 			span:nth-child(4) {
-				top: 18px;
+				top: 100%;
 				width: 0%;
 				left: 50%;
 			}	
 		}
+	}
+
+	&--title {
+		font-family: $font-family-secondary;
+		font-weight: 300;
+		color: $color-white;
+	}
+
+	&--behind {
+		position: absolute;
+		z-index: -10;
 	}
 }
